Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/enum/DA1.out
DA1.java:12:13: compiler.err.illegal.enum.static.ref
1 error
